--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
     <string name="correct">Correct</string>
     <string name="incorrect">Incorrect</string>
     <string name="not_enough_points">Not enough points</string>
+    <string name="interrupt_the_quiz">Interrupt the quiz?</string>
+    <string name="yes">Yes</string>
+    <string name="click_again_to_exit">Click again to exit</string>
 </resources>
